updata | dirctory:java-note

--- a/java-note/范型.md
+++ b/java-note/范型.md
@@ -2,17 +2,19 @@
 
 ## 范型的定义(3种)：
 
-### 类 - : "T" 只是代号；
+### <mark> 类</mark> - : "T" 只是代号；
 
-> T : type;
-> 
-> E: elements
-> 
-> K : keys
-> 
-> V : values
+> 静态类 or 普通类
 
-public class ClassName<Type>{ }
+> <mark>T</mark> : type;
+> 
+> <mark>E</mark>: elements
+> 
+> <mark>K</mark> : keys
+> 
+> <mark>V</mark> : values
+
+public class ClassName<<mark>Type</mark>>{ }  //类定义范型
 
 ```java
 public class MyClass<asdfghjkl>{
@@ -33,7 +35,7 @@ public static void main(String[] args){
 }
 ```
 
-### 静态方法不能用范型
+### <mark>静态方法</mark>不能用范型
 
 - static method( paratment , ... )；
   
@@ -43,7 +45,7 @@ public static void main(String[] args){
   
   - 静态方法直接类名调用... Arrays.sort();  //...
 
-- **<u>实例方法(instance)</u>**：
+- **<u>实例方法(instance)</u>**：非静态类
   
   ```java
   public class User<T>{
@@ -68,7 +70,7 @@ public static void main(String[] args){
       }
   ```
 
-- **静态方法(static)**：
+- **静态方法(static)**：也可定义范型，调整一下
   
   ```java
   public static void sum(T a, T b){}   //[X] error...
@@ -98,7 +100,7 @@ public static void main(String[] args){
     `ClassName`.printArrays(arr);
 ```
 
-### 接口(intetface)定义范型：
+### <mark>接口</mark>(intetface)定义范型：
 
 - (1):implements 时知道范型类型：
 
@@ -107,8 +109,13 @@ public static void main(String[] args){
 public interface XxxName_able<T>{
     int compareTo(T o);
 }
+//-------------------------------
 
 
+
+
+
+//implements
 // interface implements to ClassName: 使用(实现)
 public class Computers implements XxxNameable<UserDefineType>{
 //or: public class Computers<T> implements XxxaNameable<T>
@@ -140,7 +147,7 @@ public class Computers implements XxxNameable<UserDefineType>{
 }
 ```
 
-- (2): implements 不知道范型类型：
+- (2): implements 不知道范型类型 de 场景：
 
 ```java
 public class Computers<T> implements XxxNameable<T>{
@@ -154,7 +161,7 @@ public class Computers<T> implements XxxNameable<T>{
 
 ---
 
-## 范型的使用：
+## 范型的<mark>使用</mark>：
 
 范型通配符：
 
@@ -180,7 +187,7 @@ public class Computers<T> implements XxxNameable<T>{
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-37-47-image.png)
 
-##### 2.  <? extends supTYPE> :
+##### 2.  <? extends supTYPE> : 限定可使用的范型范围
 
 例如：
 
@@ -192,7 +199,7 @@ public class Computers<T> implements XxxNameable<T>{
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-41-21-image.png)
 
-##### 3.  <? super SubTYPE>
+##### 3.  <? super SubTYPE>：...
 
 例如：
 
@@ -202,16 +209,14 @@ public class Computers<T> implements XxxNameable<T>{
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-42-22-image.png)
 
-
-
-##### 4.   <T extends Classname>
+##### 4.   <T extends Classname>  //classname :自定义类
 
 ##### 5.   <T super  Classname>
 
 ### 范型<mark>擦除</mark>and<mark>补偿</mark>
 
-- 擦除：通过编译成没有范型的代码(范型to -> Object类型)使得低版本jvm可以可运行
+- 擦除：通过编译成没有范型的代码(<mark>范型  --to -> Object类型</mark>)使得低版本jvm可以可运行
 
-- 补偿：运行时，(内部自动)进行类型强转；（转成原文件的范型定义的类型，补偿被擦除的类型： Objece --> <TYPE>）
+- 补偿：运行时，(内部自动)进行<mark>类型强转</mark>；（转成原文件的范型定义的类型，补偿被擦除的类型： Objece --> <TYPE>）： if(x instanceof TYPE var){ var.xxx();... }
 
 ---
