updata | dirctory:java-note

--- a/java-note/范型.md
+++ b/java-note/范型.md
@@ -17,11 +17,11 @@
 public class ClassName<<mark>Type</mark>>{ }  //类定义范型
 
 ```java
-public class MyClass<asdfghjkl>{
-    private asdfghjkl name;
-    asdfghjkl title ;
-    asdfghjkl conText;
-    asdfghjkl xxx;
+public class MyClass<__asdfghjkl__>{
+    private __asdfghjkl__ name;
+    __asdfghjkl__ title ;
+    __asdfghjkl__ conText;
+    __asdfghjkl__ describe;
     //...    
 
 }
@@ -35,15 +35,19 @@ public static void main(String[] args){
 }
 ```
 
-### <mark>静态方法</mark>不能用范型
+### <mark>静态方法</mark>不能用范型*****
 
 - static method( paratment , ... )；
   
-  因为静态方法不需要 ` new ` 对象，<mark>缺少 定义时<选择类型>的步骤</mark>
+  因为静态方法<mark>不需要 ` new ` 对象</mark>，<mark>缺少 定义时<选择类型>的步骤</mark>
   
-  如： List<Integer> numList = new ArrayList<>();
+  如： List<Integer> <mark>numList </mark>= new ArrayList<>();
   
   - 静态方法直接类名调用... Arrays.sort();  //...
+
+
+
+
 
 - **<u>实例方法(instance)</u>**：非静态类
   
@@ -56,9 +60,12 @@ public static void main(String[] args){
           return name;
       }
   
-      public void setName(T name) { //实例方法(2s)
+      public void setName(T name) { //实例方法(2)使用范型类型做参数类型
           this.name = name;
       }
+  
+  
+  
   
       @Override
       public String toString(){
@@ -70,16 +77,18 @@ public static void main(String[] args){
       }
   ```
 
-- **静态方法(static)**：也可定义范型，调整一下
+- **静态方法(static)**：
   
   ```java
-  public static void sum(T a, T b){}   //[X] error...
+  public static void sum(T a, T b){     }   //[X] error...
+                                            // 静态方法不可使用范型做参数类型
   ```
 
 **<mark>BUT...</mark>**如果一定要让静态方法 可以用：给静态方法“调整”一下：
 
 ```java
 //className:
+    //修饰符 static <范型类型-定义>  返回值  静态方法名(范型 参数1,范型 参数2,...) 
     //(1)
     public static <E> void printArrays(E[] array){//...
             for(E arr : array){
@@ -92,7 +101,7 @@ public static void main(String[] args){
         return (Integer)a + (Integer)b;
     }
 
-//use:
+//使用:
     //(2)
     `ClassName`.sum(inputBox_1,inputBox_2);
 
@@ -106,8 +115,8 @@ public static void main(String[] args){
 
 ```java
 // interface: 定义
-public interface XxxName_able<T>{
-    int compareTo(T o);
+public interface XxxName_able<__T__>{
+    int compareTo(__T__ o);
 }
 //-------------------------------
 
@@ -117,7 +126,7 @@ public interface XxxName_able<T>{
 
 //implements
 // interface implements to ClassName: 使用(实现)
-public class Computers implements XxxNameable<UserDefineType>{
+public class Computers implements XxxNameable<自定义类>{
 //or: public class Computers<T> implements XxxaNameable<T>
 
     /*
@@ -129,18 +138,18 @@ public class Computers implements XxxNameable<UserDefineType>{
     */
 
     @Override  //实现接口，重写接口的compareTO():
-    public int compareTo(UserDefineType o){
-    //使用 范型，避免了向下转型..
+    public int compareTo(自定义类 o){
+    //使用 __范型__，避免了向下转型..!!!
     /*
-        if( o instance UserDefinType){
-                UserDefineType user = (UserDefineType)o;
+        if( o instance UserDefinType user){
+             // UserDefineType user = (UserDefineType)o;
                 user.XXX
                 user.xxx
-                ...
+             // ...
          }
     */
     //int compareTo(NewClassName o){
-        return this.getNum() - o.num;
+        return this.getNum() - o.num; //desc
 
     } 
 
@@ -150,7 +159,7 @@ public class Computers implements XxxNameable<UserDefineType>{
 - (2): implements 不知道范型类型 de 场景：
 
 ```java
-public class Computers<T> implements XxxNameable<T>{
+public class Computers<__T__> implements XxxNameable<__T__>{
     //...
     @Override
     public int compareTo(T o){
@@ -167,7 +176,7 @@ public class Computers<T> implements XxxNameable<T>{
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-36-07-image.png)
 
-###### 1.   <?>  :相当于 void ,是支持任意引用数据类型
+###### 1.  <mark> <?> </mark> :相当于 void ,是支持任意引用数据类型(什么场景使用？)
 
 - Integer
 
@@ -185,21 +194,37 @@ public class Computers<T> implements XxxNameable<T>{
 
 - ...
 
+
+
+- 传入参数的使用
+
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-37-47-image.png)
 
-##### 2.  <? extends supTYPE> : 限定可使用的范型范围
+##### 2.  <? extends supTYPE：父类> : 限定可使用的范型范围（父类及以下能用）
 
-例如：
+例如：ArrayList< ? extends Object> <mark>list </mark>
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-40-45-image.png)
 
 则：
 
+    new ArrayList<String>();
+    new ArrayList<Integer>();
+    new ArrayList<Double>();
+
+
+
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-41-06-image.png)
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-41-21-image.png)
 
-##### 3.  <? super SubTYPE>：...
+
+
+
+
+
+
+##### 3.  <? super SubTYPE>：（子类和它的父类能用）
 
 例如：
 
@@ -208,6 +233,12 @@ public class Computers<T> implements XxxNameable<T>{
 则：
 
 ![](/home/administrator/.config/marktext/images/2024-09-02-20-42-22-image.png)
+
+> Object > String ...
+
+
+
+
 
 ##### 4.   <T extends Classname>  //classname :自定义类
 
