add java.note: reflect...

--- a/java-note/反射.md
+++ b/java-note/反射.md
@@ -1,1 +1,205 @@
+## 反射机制
 
+> 反射机制是JDK的一套类库：
+
+- 反射很重要： 后期的框架学习 用到大量的反射 + 注解
+
+- 使用反射机制能更灵活
+
+java.lang.<mark>Class</mark> ： 代表某种文件：String.class ... 或代表莫种类型 System.class : System类型
+
+> class Class{}
+
+java.lang.reflect:
+
+java.lang.reflect.<mark>Filed</mark>
+
+java.lang.reflect.<mark>Method</mark>
+
+java.lang.reflect.<mark>Constructor</mark>
+
+#### 获取class的三种方式
+
+- Class<T> : 支持范型      
+
+##### 方法一： Class.forName("java.xxx.类名 ");
+
+> 静态方法： 返回 Class<?> 类型 
+
+- 注意：
+
+![](/home/administrator/.config/marktext/images/2024-10-05-19-51-53-image.png)
+
+```java
+package com.wuzhongpeng.reflect;
+import  java.lang.Class;
+public class CreateReflectTest {
+    public static void main(String[] args) {
+        try {
+            Class<?> c = Class.forName("java.lang.String"); //*****
+            System.out.println("okk");
+        } catch (ClassNotFoundException e) {
+            //System.out.println(e.getMessage());
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+##### 方法二：继承obj的 getClass()
+
+```java
+package com.wuzhongpeng.reflect;
+import  java.lang.Class;
+
+public class CreateReflectTest {
+    public static void main(String[] args) {
+        try {
+            Class<?> c = Class.forName("java.lang.String");//*****
+            System.out.println("okk");
+            String text = "Hello Java ...";
+            Class<?> getClassName = text.getClass(); //*****    
+            System.out.println(getClassName == c); //true: 因为都是同一个类型(class:string)
+        } catch (Exception e) {
+            //System.out.println(e.getMessage());
+            e.printStackTrace();
+        }
+
+
+    }
+}
+```
+
+> 通过 getClass()  和  Class.forName() 获取到的是同一个地址，表明只有一份地址...如上述的实例就指向的同一份String.class
+> 
+> - 都代表的同一种类型
+
+##### 方法三：基本数据类型也有对应的.class映射
+
+```java
+Class<?> str = String.class;
+Class<?> i = int.class;
+Class<?> c = char.class;
+```
+
+##### 使用 newInstance(); //获取到对象实例
+
+> - 后面使用 : java.lang.reflext.Constructor取代了； newInstance() 已经过时！
+> 
+> - newInstance() 是调用了类的“无参数构造器 ”
+
+```java
+package com.wuzhongpeng.reflect;
+import com.wuzhongpeng.oop01.Customer;
+public class InstanceTest {
+    public static void main(String[] args) throws InstantiationException, IllegalAccessException, ClassNotFoundException {
+        Class<?> userClass = Class.forName("com.wuzhongpeng.oop01.Customer");
+        Customer test =  (Customer) userClass.newInstance();
+
+        System.out.println(test);
+    }
+}
+```
+
+> !!!!!!! 注意：调用的是类的无参数构造函数，so ,必须有无参数构造器
+
+
+
+
+
+#### 反射的好处就是灵活：
+
+>  框架就是采用反射进行配置的...都打包好了
+
+- 如配置文件：在配置文件编辑选择要是实例化的类文件,随时修改文件得到类
+
+调取：
+
+![](/home/administrator/.config/marktext/images/2024-10-05-22-17-22-image.png)
+
+在配置文件中选择要实例的类：不破坏ocp原则
+
+![](/home/administrator/.config/marktext/images/2024-10-05-22-17-37-image.png)
+
+
+
+
+
+#### 通过反射获得 类字段:Field
+
+- Field类
+
+> Class<?> c = Class.forName(...);
+> 
+> Field field = c.getxxxField("field-name");
+> 
+> Field[ ] fields = c.getXXXField(s);  
+
+```java
+
+package com.wuzhongpeng.reflect;
+
+import java.lang.reflect.AnnotatedType;
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
+
+public class GetFieldTest {
+    public static void main(String[] args) throws Exception{
+        Class<?> c = Class.forName("com.wuzhongpeng.reflect.Mouse");
+        //c.getName(); //com.wuzhongpeng.reflect.Mouse
+        System.out.println("------------------------- class get Field -----------------------");
+        Field[] fields = c.getFields();//只获取public的字段
+        System.out.println("使用 \'.getFields()\' 方法可以得到 " + fields.length + "个字段");
+        for(Field field : fields){
+            System.out.print(field.getName() + "|"); //获取字段名
+            System.out.print(field.getType() + "|"); //获取字段类型
+            System.out.println();
+        }
+        System.out.println("---------------------------------");
+
+        Field[] fieldAll = c.getDeclaredFields();//获取全部定义的字段
+        System.out.println("使用 \'.getDeclaredFields()\' 方法可以得到 " + fields.length + "个字段-全部");
+        for(Field field : fieldAll){ //field就是一个类型：Field类型的对象
+            System.out.print(field.getName() + " |");
+            System.out.print(field.getType() + " |"); //获取字段类型
+            System.out.print(field.getType().getSimpleName() + " "); //获取字段简短类型名
+            System.out.print(field.getModifiers()); //获取字段修饰符：数字int  0 2 8 23 ...组合值
+            System.out.print(Modifier.toString(field.getModifiers()) + " "); //转换获得修饰符: 使用Modifier的静态方法转换出修饰符名...
+            System.out.println();
+        }
+        System.out.println("---------------------- class get Super -----------------------------------------------");
+        System.out.println(c.getSuperclass()); //获取父类对象
+        System.out.println(c.getSuperclass().getName()); //获取父类对象的对象名
+        System.out.println("----------------------- class get interfaces --------------------------------------------");
+        System.out.println(c.getSuperclass().getSimpleName()); //获取父类对象(简短名)
+        Class<?>[] interfaces = c.getInterfaces();
+        for(var i : interfaces){
+            System.out.println(i);
+        }
+    }
+
+}
+
+```
+
+###### 使用反射可以  `反编译` 文件:
+
+> 获得类的属性：(属性名、属性类型、属性修饰符...)
+> 
+> - 使用 Strinbuilder sb.appen()...追加拼接成代码文本...
+> 
+> - ...实现一下：
+
+###### 使用反射修改属性值
+
+![](/home/administrator/.config/marktext/images/2024-10-06-00-58-34-image.png)
+
+> 类型和属性内容都可通过反射得到，这为框架的设计和开发提供灵活性：（只需要写个配置文件，动态获得...
+
+---
+
+
+
+#### 通过反射获得 类方法
+
+ 
