add and modify ...

--- a/java-note/反射.md
+++ b/java-note/反射.md
@@ -1,4 +1,4 @@
-## 反射机制
+## 反射机制 - 在运行时：Runtime
 
 > 反射机制是JDK的一套类库：
 
@@ -46,7 +46,7 @@ public class CreateReflectTest {
 }
 ```
 
-##### 方法二：继承obj的 getClass()
+##### 方法二：使用继承Object类的 getClass()
 
 ```java
 package com.wuzhongpeng.reflect;
@@ -55,10 +55,10 @@ import  java.lang.Class;
 public class CreateReflectTest {
     public static void main(String[] args) {
         try {
-            Class<?> c = Class.forName("java.lang.String");//*****
+            Class<?> c = Class.forName("java.lang.String");//** 方法一
             System.out.println("okk");
             String text = "Hello Java ...";
-            Class<?> getClassName = text.getClass(); //*****    
+            Class<?> getClassName = text.getClass(); //** 方法二
             System.out.println(getClassName == c); //true: 因为都是同一个类型(class:string)
         } catch (Exception e) {
             //System.out.println(e.getMessage());
@@ -82,7 +82,7 @@ Class<?> i = int.class;
 Class<?> c = char.class;
 ```
 
-##### 使用 newInstance(); //获取到对象实例
+##### 使用 newInstance(); //获取到对象实例（现在不推荐这种了，只能调无参数的...）
 
 > - 后面使用 : java.lang.reflext.Constructor取代了； newInstance() 已经过时！
 > 
@@ -103,15 +103,11 @@ public class InstanceTest {
 
 > !!!!!!! 注意：调用的是类的无参数构造函数，so ,必须有无参数构造器
 
-
-
-
-
 #### 反射的好处就是灵活：
 
 >  框架就是采用反射进行配置的...都打包好了
 
-- 如配置文件：在配置文件编辑选择要是实例化的类文件,随时修改文件得到类
+- 如配置文件：在<mark>配置文件</mark>编辑选择要是实例化的类文件,随时修改文件得到类
 
 调取：
 
@@ -121,25 +117,20 @@ public class InstanceTest {
 
 ![](/home/administrator/.config/marktext/images/2024-10-05-22-17-37-image.png)
 
-
-
-
-
-#### 通过反射获得 类字段:Field
+#### 通过反射获得 类字段 : Field
 
 - Field类
 
 > Class<?> c = Class.forName(...);
 > 
-> Field field = c.getxxxField("field-name");
+> Field field = c.getxxxField("field-name");  //获取对应单个字段
 > 
-> Field[ ] fields = c.getXXXField(s);  
+> Field[ ] fields = c.getXXXFields ( ... );   //获取全部字段
 
 ```java
-
 package com.wuzhongpeng.reflect;
 
-import java.lang.reflect.AnnotatedType;
+//import java.lang.reflect.AnnotatedType;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 
@@ -167,10 +158,10 @@ public class GetFieldTest {
             System.out.print(Modifier.toString(field.getModifiers()) + " "); //转换获得修饰符: 使用Modifier的静态方法转换出修饰符名...
             System.out.println();
         }
-        System.out.println("---------------------- class get Super -----------------------------------------------");
+        System.out.println("---------------------- class get Super Class -----------------------------------------------");
         System.out.println(c.getSuperclass()); //获取父类对象
         System.out.println(c.getSuperclass().getName()); //获取父类对象的对象名
-        System.out.println("----------------------- class get interfaces --------------------------------------------");
+        System.out.println("----------------------- class get interfaces Class --------------------------------------------");
         System.out.println(c.getSuperclass().getSimpleName()); //获取父类对象(简短名)
         Class<?>[] interfaces = c.getInterfaces();
         for(var i : interfaces){
@@ -179,8 +170,11 @@ public class GetFieldTest {
     }
 
 }
-
 ```
+
+> Modifier.toString(field.getModifiers()) //转换获得修饰符: 使用Modifier的静态方法转换出修饰符名...
+> 
+> 也可获取类的修饰符： c.getModifiers(); //int...  Modifier.toString(c.getModifiers()
 
 ###### 使用反射可以  `反编译` 文件:
 
@@ -190,16 +184,130 @@ public class GetFieldTest {
 > 
 > - ...实现一下：
 
-###### 使用反射修改属性值
+---
 
-![](/home/administrator/.config/marktext/images/2024-10-06-00-58-34-image.png)
+###### 使用反射修改属性值 ； 重点
+
+> 1. 先获得类反射对象
+> 
+> 2. 获得该类的字段的对象
+> 
+> 3. 修改该字段（字段对象 . set()  ）
+
+    
+
+mouse类
+
+```java
+package com.wuzhongpeng.reflect;
+
+public class Mouse {
+    public   String name;
+    public   int age;
+    private  String address;
+    public static final String ID = "003234";
+
+}
+```
+
+反射实验类：
+
+```java
+package com.wuzhongpeng.reflect;
+
+import java.lang.reflect.Field;
+
+public class SetField {
+    public static void main(String[] args) throws ClassNotFoundException, NoSuchFieldException, IllegalAccessException {
+        Mouse mouse = new Mouse();
+        mouse.name = "XiaoXiao"; //直接对象赋值 set ...
+        System.out.println(mouse.name);//get...
+
+        Class<?> c = Class.forName("com.wuzhongpeng.reflect.Mouse");
+        Field field = c.getDeclaredField("name");
+        field.set(mouse,"DaDa"); //set ...
+        System.out.println(field.get(mouse)); //get...
+        Field fieldAddrees = c.getDeclaredField("address");
+        fieldAddrees.setAccessible(true);//将private字段设置成public 
+        fieldAddrees.set(mouse,"海南海口");
+        System.out.println(fieldAddrees.get(mouse));
+    }
+}
+```
 
 > 类型和属性内容都可通过反射得到，这为框架的设计和开发提供灵活性：（只需要写个配置文件，动态获得...
 
 ---
 
+#### 通过反射获得 类方法 ： Method
 
+被反射类
 
-#### 通过反射获得 类方法
+![](/home/administrator/.config/marktext/images/2024-10-06-15-14-16-image.png)
 
- 
+反射实验类
+
+![](/home/administrator/.config/marktext/images/2024-10-06-15-13-41-image.png)
+
+```java
+        //获取类方法：------------------------------------
+        Method[] methods = clazz.getDeclaredMethods(); //方法大体
+        for (int i = 0; i < methods.length; i++) {
+            sb.append("\t");
+            sb.append(Modifier.toString(methods[i].getModifiers()));//修饰符
+            sb.append(" ");
+            sb.append(methods[i].getReturnType().getSimpleName()); //返回值
+            sb.append(" ");
+            sb.append(methods[i].getName());
+            sb.append(" ( ");
+            Parameter[] param =  methods[i].getParameters();//方法内部参数
+            for (int j = 0; j <param.length; j++) {
+                sb.append(param[j].getType().getSimpleName());
+                sb.append(" ");
+                sb.append(param[j].getName());
+                if(j !=  param.length -1){
+                    sb.append(" , ");
+                }
+            }
+            sb.append(" ){ }");
+            sb.append("\n");
+        }
+
+        sb.append("}");
+```
+
+###### 通过反射机制 ： 调用方法 ： Call(<mark>invoke</mark>) Methon  ；重点
+
+> - 哪个对象(1)
+> 
+> - 哪个方法(2)
+> 
+> - 哪个参数(3)
+> 
+> - 返回什么值(4)
+
+调用有参
+
+![](/home/administrator/.config/marktext/images/2024-10-06-16-21-50-image.png)
+
+调用无参
+
+![](/home/administrator/.config/marktext/images/2024-10-06-16-24-33-image.png)
+
+完整代码
+
+> UserServie userService = new UserService(xxx);
+
+![](/home/administrator/.config/marktext/images/2024-10-06-16-25-12-image.png)
+
+> 步骤：
+> 
+>     1.先获取反射类
+> 
+>     2. 获取类方法（选择指定参数的类）
+> 
+>     3.调用类：（传入类对象，传入参数）
+
+------
+
+##### 通过反射获得  类构造方法 ： conStruction
