--- a/java-note/注解.md
+++ b/java-note/注解.md
@@ -10,29 +10,29 @@
 
 ### java内置注解
 
-#### 编译型: 给编译器javac看的
+#### 编译型>:     给（编译器javac）看的
 
 ##### @Deprecated
 
-- 发出过时警告: 被deprecated修饰的方法、类...在调用的时候会提示不可用
+- 发出过时警告: 被deprecated修饰的方法、类...在调用的时候会<u>提示不可用</u>
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-19-39-54-image.png)
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-19-40-23-image.png)
 
-> Deprecated: 可加参数：
+> Deprecated: 可传入参数（传入属性值）：
 > 
 > ![](/home/administrator/.config/marktext/images/2024-10-07-19-41-42-image.png)
 > 
-> 内部：
+> > 表示从版本9开始，就过时了，是被移除了
+> 
+> 内部属性设置：
 > 
 > ![](/home/administrator/.config/marktext/images/2024-10-07-20-10-06-image.png)
-> 
-> 表示从版本9开始，就过时了，是被移除了
 
 ##### @Override
 
-> 标注 实例方法：标注 类、属性都会报异常
+> 标注 实例方法：     标注其他： 类、属性都会报异常
 > 
 > - 编译阶段，判断该方法是否重写 父类方法，如果没有重写，就报错   
 
@@ -46,9 +46,11 @@
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-19-52-43-image.png)
 
+---
+
 ##### @Functionallnterface
 
-> 函数式接口注解： 一个函数只有一个抽象接口，不是就报错：如lambda表达式；
+> 函数式接口注解： 一个函数方法只有一个抽象接口，不是就报错：如lambda表达式；
 
 ？？ 什么叫函数式接口？？？
 
@@ -56,13 +58,17 @@
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-20-01-35-image.png)
 
-- 默认方法 和静态方法都可以
+- 接口内部的默认方法(default) 和静态方法(static)都可以,唯独只能有一个抽象方法
+
+---
 
 #### 运行型
 
 。。。。。。
 
 ### 自定义注解
+
+---
 
 - 无参注解
 
@@ -71,6 +77,8 @@
 和定义类、定义接口很像 @interface    
 
 > public @interface Annotation-name
+
+---
 
 - 有参数的注解
 
@@ -108,11 +116,11 @@
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-00-06-image.png)
 
-使用
+使用（给注解传入属性值）
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-00-54-image.png)
 
-数组属性的定义：
+(注解的 数组属性)的定义：
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-03-34-image.png)
 
@@ -120,13 +128,17 @@
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-04-04-image.png)
 
-> 使用"{、、、}"包裹
+> 使用"{ @1,@2,@3,...}"包裹
+
+---
 
 补充： 
 
-1. 使用注解属性时，属性名是value的可以省略：![](/home/administrator/.config/marktext/images/2024-10-07-21-08-29-image.png)![](/home/administrator/.config/marktext/images/2024-10-07-21-12-12-image.png)
+1. 使用注解属性时，属性名<mark>是value的</mark>可以省略：<img src="file:///home/administrator/.config/marktext/images/2024-10-07-21-08-29-image.png" title="" alt="" width="278"><img title="" src="file:///home/administrator/.config/marktext/images/2024-10-07-21-12-12-image.png" alt="" width="628">
 
-2.使用的是数组属性的注解是，一个可省略“{  }“![](/home/administrator/.config/marktext/images/2024-10-07-21-11-54-image.png)
+---
+
+2.使用的是数组属性的注解是，一个可省略“{  }“:   <img title="" src="file:///home/administrator/.config/marktext/images/2024-10-07-21-11-54-image.png" alt="" width="276">
 
 #### 元注解Matetata
 
@@ -142,11 +154,11 @@
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-23-03-image.png)
 
-> **** 反射机制，是有get注解的方法的，so：
+> **** 反射机制，是有<mark>get注解</mark>的方法的，so：
 > 
 > ![](/home/administrator/.config/marktext/images/2024-10-07-21-25-57-image.png)
 > 
-> 可获取到注解： （前提： 注解是标注成了Runtime）:![](/home/administrator/.config/marktext/images/2024-10-07-21-27-26-image.png)
+> 可获取到注解： （前提： 注解是标注成了Runtime）:  class,和 source 是使用反射获取不到的...![](/home/administrator/.config/marktext/images/2024-10-07-21-27-26-image.png)
 > 
 > 不是RetentionPolicy.RUNTIME，就获取值得：null  //没有
 
@@ -155,6 +167,8 @@
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-31-41-image.png)
 
 【3】第三个：被标注的（注解名）可在使用javadoc编译时（添加）该注解到帮助文档之中
+
+     ![](/home/administrator/.config/marktext/images/2024-10-08-16-37-06-image.png)
 
 【4】第四个：使得该注解的修饰的注解继承到它的子类（父类被注解，使得子类也被注解）
 
@@ -169,6 +183,10 @@
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-54-52-image.png)![](/home/administrator/.config/marktext/images/2024-10-07-21-54-19-image.png)
 
 ![](/home/administrator/.config/marktext/images/2024-10-07-21-55-12-image.png)
+
+> 被元注解标注之后，该注解可以使用多次（但是得是不同值，否则无意义）
+
+---
 
 ### 反射注解： 属于放射的章节
 
