--- a/java-note/注解.md
+++ b/java-note/注解.md
@@ -50,7 +50,7 @@
 
 ##### @Functionallnterface
 
-> 函数式接口注解： 一个函数方法只有一个抽象接口，不是就报错：如lambda表达式；
+> 函数式接口注解： 一个接口 只能 有 一个 抽象方法，不是就报错：如lambda表达式；
 
 ？？ 什么叫函数式接口？？？
 
