update| java-note: generise.md

--- a/java-note/范型.md
+++ b/java-note/范型.md
@@ -1,8 +1,18 @@
-# 范型
+# 范型: Generise
 
-## 范型的定义(3种)：
+---
 
-### <mark> 类</mark> - : "T" 只是代号；
+- 修饰类
+
+- 修饰接口
+
+- 修饰实例
+
+- 也可修饰静态方法...
+
+- 还能修饰 方法的 参数类型
+
+### 【 类 】: "T" 只是代号
 
 > 静态类 or 普通类
 
@@ -17,66 +27,41 @@
 public class ClassName<<mark>Type</mark>>{ }  //类定义范型
 
 ```java
-public class MyClass<__asdfghjkl__>{
-    private __asdfghjkl__ name;
-    __asdfghjkl__ title ;
-    __asdfghjkl__ conText;
-    __asdfghjkl__ describe;
+public class MyClass<Anyting>{ //定义：范型：类
+//可限定范围： public class MyClass< T extends/super className>{}
+    private Anyting name; //定义：范型：属性
+    Anyting title ;
+    Anyting conText;
+    Anyting describe;
     //...    
+    public Anyting getName(){  //定义范型：方法返回值
+        return this.name;
+    }
+    public Anyting setName(Anyting name){  //定义范型：方法参数
+        this.name = name;
+    }
 
 }
 
-
 /*TestMain*/
 public static void main(String[] args){
-    MyClass<String> mc = MyClass(); // private String name;
+    MyClass<String> mc = MyClass(); //使用
     mc.name = "aaaaa";
 
 }
 ```
 
-### <mark>静态方法</mark>不能用范型*****
+> 【静态方法】不能用范型，但是它的参数可以: 需要声明一下：
 
-- static method( paratment , ... )；
-  
-  因为静态方法<mark>不需要 ` new ` 对象</mark>，<mark>缺少 定义时<选择类型>的步骤</mark>
-  
-  如： List<Integer> <mark>numList </mark>= new ArrayList<>();
-  
-  - 静态方法直接类名调用... Arrays.sort();  //...
+>                                            但是可以使用  static <T> returnType : 来声明 参数的类型
+> 
+>                                             public static add(Anyting a, Anyting b){}  //【error】!!!
+> 
+>                                             public static <Anyting,Anyting> add(Anyting a, Anyting b){}
 
-- **<u>实例方法(instance)</u>**：非静态类
-  
-  ```java
-  public class User<T>{
-  
-      private T name; 
-  
-      public T getName() {  //实例方法(1)
-          return name;
-      }
-  
-      public void setName(T name) { //实例方法(2)使用范型类型做参数类型
-          this.name = name;
-      }
-  ```
-  
-      @Override
-      public String toString(){
-      
-          return "{" + this.name + "}";
-      
-      }
-      
-      }
+---
 
-```
-- **静态方法(static)**：
 
-```java
-public static void sum(T a, T b){     }   //[X] error...
-                                          // 静态方法不可使用范型做参数类型
-```
 
 **<mark>BUT...</mark>**如果一定要让静态方法 可以用：给静态方法“调整”一下：
 
@@ -97,11 +82,23 @@ public static void sum(T a, T b){     }   //[X] error...
 
 //使用:
     //(2)
+     //inputBox_1 : Anyting
+     //inputBox_2 : Anyting
     `ClassName`.sum(inputBox_1,inputBox_2);
 
     //(1)
     `ClassName`.printArrays(arr);
 ```
+
+
+
+
+
+- 补充： < T extends/super A & B,C,D,E>   :  定义阶段： 限定使用 继承（super/extends）接口 
+
+---
+
+
 
 ### <mark>接口</mark>(intetface)定义范型：
 
@@ -110,43 +107,29 @@ public static void sum(T a, T b){     }   //[X] error...
 ```java
 // interface: 定义
 public interface XxxName_able<__T__>{
-    int compareTo(__T__ o);
+    int compareTo(__T__  o);//抽象方法没有方法体
+    default void xxx(){.............}
 }
 //-------------------------------
 
-
-
-
-
-//implements
-// interface implements to ClassName: 使用(实现)
-public class Computers implements XxxNameable<自定义类>{
-//or: public class Computers<T> implements XxxaNameable<T>
-
-    /*
-
-    T num;
-    void setNum(argments){this.num = argments;} 
-    T getNum(){return this.num;} 
-
-    */
-
-    @Override  //实现接口，重写接口的compareTO():
+//implements：
+public class Computers implements XxxNameable<自定义类：已知类型>{
+//可加限定： public class Computers implements XxxNameable<T extends/super 自定义类>{
+   @Override  //实现接口，重写接口的compareTO():
     public int compareTo(自定义类 o){
-    //使用 __范型__，避免了向下转型..!!!
-    /*
-        if( o instance UserDefinType user){
-             // UserDefineType user = (UserDefineType)o;
+    //使用 __范型__，可避免了向下转型..!!!
+
+    /* 不用这样做了：
+        if( o instance 自定义类 user){
+             // 自定义类 user = (自定义类)o;
                 user.XXX
                 user.xxx
              // ...
          }
     */
     //int compareTo(NewClassName o){
-        return this.getNum() - o.num; //desc
-
+        return this.getNum() - o.num; //desc ：倒序
     } 
-
 }
 ```
 
@@ -154,6 +137,7 @@ public class Computers implements XxxNameable<自定义类>{
 
 ```java
 public class Computers<__T__> implements XxxNameable<__T__>{
+//可使用限定符： public class Computers <T extends className> implements xx<...>{}
     //...
     @Override
     public int compareTo(T o){
@@ -162,13 +146,19 @@ public class Computers<__T__> implements XxxNameable<__T__>{
 }
 ```
 
+##### 在定义阶段进行的约束（控制上下限）
+
+###### <T extends classname>
+
+###### < T super classname>
+
+
+
 ---
 
 ## 范型的<mark>使用</mark>：
 
 范型通配符：
-
-![](/home/administrator/.config/marktext/images/2024-09-02-20-36-07-image.png)
 
 ###### 1.  <mark> <?> </mark> :相当于 void ,是支持任意引用数据类型(什么场景使用？)
 
@@ -190,44 +180,72 @@ public class Computers<__T__> implements XxxNameable<__T__>{
 
 - 传入参数的使用
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-37-47-image.png)
 
-##### 2.  <? extends supTYPE：父类> : 限定可使用的范型范围（父类及以下能用）
 
-例如：ArrayList< ? extends Object> <mark>list </mark>
+```java
+public class GenericTest{
+    
+    public static void print(ArrayList<?> list){}
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-40-45-image.png)
+    public static void main(String[] args){
+        print(new ArrayList<String>());
+        print(new ArrayList<Object>());
+        print(new ArrayList<User...>());
+        print(new ArrayList<Integer>());
+        //...
+        
+    }
+}
+```
 
-则：
+##### 2.  <? extends > : 限定可使用的范型范围（父类及以下能用）
 
-    new ArrayList<String>();
-    new ArrayList<Integer>();
-    new ArrayList<Double>();
+```java
+//define:
+public static void print2(ArrayList<? extends Number> list){...}
+//use:
+print2(new Arraylist<Integer>());
+print2(new Arraylist<Byte>());
+print2(new Arraylist<Double>());
+```
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-41-06-image.png)
+- 传入 ArrayList 类型的参数（对于print: list的参数是已知的ArrayList<>类型
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-41-21-image.png)
+- 对于ArrayList<未知> 却是未知的
 
-##### 3.  <? super SubTYPE>：（子类和它的父类能用）
+> String 不是 Number 的子类...
+> 
+> so : print2(new ArrayList<String>()); //报错！！！
+
+---
+
+
+
+##### 3.  <? super xxx>：（子类和它的父类能用）
 
 例如：
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-42-09-image.png)
+```java
+public static void print3(ArrayList<? super String> list){}
+```
 
 则：
 
-![](/home/administrator/.config/marktext/images/2024-09-02-20-42-22-image.png)
+```java
+print3(new ArrayList<Object>());
+print3(new ArrayList<String>());
+```
 
-> Object > String ...
 
-##### 4.   <T extends Classname>  //classname :自定义类
 
-##### 5.   <T super  Classname>
+---------
+
+
 
 ### 范型<mark>擦除</mark>and<mark>补偿</mark>
 
-- 擦除：通过编译成没有范型的代码(<mark>范型  --to -> Object类型</mark>)使得低版本jvm可以可运行
+- 擦除：通过**<u>编译成没有范型</u>**的代码(<mark>范型  --to -> Object类型</mark>)；目的：使得低版本jvm可以可运行
 
-- 补偿：运行时，(内部自动)进行<mark>类型强转</mark>；（转成原文件的范型定义的类型，补偿被擦除的类型： Objece --> <TYPE>）： if(x instanceof TYPE var){ var.xxx();... }
+- 补偿：运行时，(内部自动)进行<mark>类型强转</mark>：（type)；（转成原文件的范型定义的类型，补偿被擦除的类型： Objece --> <TYPE>   ）： if(x instanceof   TYPE   v){ v.xxx();... }
 
 ---
